assets/css/style.css
body {
    font-size: 11pt;
    font-family: 'Open Sans', sans-serif;
    color: #000;
    width: 800px;
    margin: 0 auto;
}

#mugshot {
    margin: 0 auto;
    width: 325px;
    display: block;
    border: 1px solid black;
}

.divider {
    border-bottom: 1px solid #CCC;
}

div.divider {
    margin: 5px auto;
    width: 50%;
}

a:link {
    color: #36c;
    text-decoration: none;
}

a:visited {
    color: #36c;
    text-decoration: none;
}

a:hover {
    color: #168cf0;
    text-decoration: underline;
}

a:active {
    color: #36c;
    text-decoration: none;
}

nav {
    display: inline;
    font-size: 1rem;
}

footer {
    margin: 5px 0;
    text-align: center;
    font-size: 0.65rem;
}

pre asdfasdfcode {
    padding: 10px;
    margin: 0 auto;
}

asdfasdfcode {
    border: 1px dashed gray;
    background: #EEE;
}

.entry-description {
    padding-left: 5px;
    font-style: italic;
}

li {
    margin-top: 5px;
}

main {
    margin-top: 30px;
}

#name_tagline {
    display: inline-block;
    width: 68%;
}

#name {
    font-weight: 600;
    font-size: 2rem;
}

#tagline {
    font-size: 1rem;
    color: #444;
}

.post-title {
    margin-bottom: 0;
}

#post-header {
    margin-bottom: 30px;
}

h1 {
    font-size: 1.2rem;
}

h2 {
    font-size: 1.05rem;
}

time {
    font-family: 'Droid Sans Mono', monospace;
}

#active-nav {
    text-decoration: underline;
}

ul#nav {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: inline-block;
    font-size: 1.2rem;
}

ul#nav li {
    display: inline;
}

div.highlight {
    border: dashed 2px #eee;
    padding: 5px;
    background-color: #f9f9f9;
}

